--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Image slider library
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+
+    //Glide library dependency
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
