--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdk 30
         versionCode 1
         versionName "1.0"
+        setProperty("archivesBaseName", "view4all")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -49,4 +50,25 @@ dependencies {
 
     //Glide library dependency
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Video player library
+//    implementation 'com.github.HamidrezaAmz:MagicalExoPlayer:3.0.2'
+
+    //Exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.3'
+
+    //Fetch library for download the videos
+    implementation "com.tonyodev.fetch2:fetch2:3.0.12"
 }
